--- a/templates/contacts/contact_list_spa.haml
+++ b/templates/contacts/contact_list_spa.haml
@@ -63,9 +63,8 @@
 
   %temba-modax#create-group-modal(header='{% trans "Create Group" %}' endpoint="{% url 'contacts.contactgroup_create' %}" -temba-loaded="handleCreateGroupModalLoaded")
 
-  .mt-4.shadow.rounded-lg
-    .overflow-y-auto
-      -include "contacts/contact_list_include.haml"
+  .mt-4.shadow.rounded-lg.overflow-y-auto
+    -include "contacts/contact_list_include.haml"
 
   .flex.flex-col(class="{%if not is_spa%}mb-16{%endif%}")
     -include "includes/pagination.haml"
