--- a/templates/contacts/contactfield_list.haml
+++ b/templates/contacts/contactfield_list.haml
@@ -7,193 +7,191 @@
 -block page-top
 
 -block content
-  -block spa-body
-    #pjax
-      -block pjax
-        .lp-frame.mt-0
-          -if not is_spa
-            .left
-              .flex.flex-col
-                -if org_perms.contacts.contactfield_create
-                  .w-64.mr-5
-                    %temba-modax#create-field-modal{ header:'{% trans "Create Field" %}', endpoint:"{% url 'contacts.contactfield_create' %}"}
-                      .block.button-primary.mb-3
-                        - trans "Create Field"
+  #pjax
+    -block pjax
+      .lp-frame.mt-0
+        .left
+          .flex.flex-col
+            -if org_perms.contacts.contactfield_create
+              .w-64.mr-5
+                %temba-modax#create-field-modal{ header:'{% trans "Create Field" %}', endpoint:"{% url 'contacts.contactfield_create' %}"}
+                  .block.button-primary.mb-3
+                    - trans "Create Field"
 
-                .lp-nav.upper
-                  -for category in cf_categories
-                    .lp-nav-item{'class': '{% if request.path == category.url %}font-normal{% endif %}' }
-                      .name{onclick:"goto(event)", href:'{{category.url}}'}
-                        {{category.label}}
-                      .count{onclick:"goto(event)", href:'{{category.url}}'}
-                        {{category.count|intcomma}}
+            .lp-nav.upper
+              -for category in cf_categories
+                .lp-nav-item{'class': '{% if request.path == category.url %}font-normal{% endif %}' }
+                  .name{onclick:"goto(event)", href:'{{category.url}}'}
+                    {{category.label}}
+                  .count{onclick:"goto(event)", href:'{{category.url}}'}
+                    {{category.count|intcomma}}
 
-                .lp-nav.lower
-                  -for category in cf_types
-                    .lp-nav-item{'class': '{% if selected_value_type == category.value_type %}font-normal{% endif %}' }
-                      .name{onclick:"goto(event)", href:'{{category.url}}'}
-                        {{category.label}}
-                      .count{onclick:"goto(event)", href:'{{category.url}}'}
-                        {{category.count|intcomma}}
+            .lp-nav.lower
+              -for category in cf_types
+                .lp-nav-item{'class': '{% if selected_value_type == category.value_type %}font-normal{% endif %}' }
+                  .name{onclick:"goto(event)", href:'{{category.url}}'}
+                    {{category.label}}
+                  .count{onclick:"goto(event)", href:'{{category.url}}'}
+                    {{category.count|intcomma}}
 
-          .right
+        .right
 
-            -if total_count >= total_limit
-              .mb-4
-                %temba-alert(level="warning")
-                  -blocktrans trimmed with limit=total_limit
-                    You have reached the limit of {{ limit }} fields per workspace. Please remove fields that you are no longer using.
-            -elif total_count >= total_limit|add:-10
-              .mb-4
-                %temba-alert(level="warning")
-                  -blocktrans trimmed with limit=total_limit
-                    You are approaching the limit of {{ limit }} fields per workspace. You should remove fields that you are no longer using.
+          -if total_count >= total_limit
+            .mb-4
+              %temba-alert(level="warning")
+                -blocktrans trimmed with limit=total_limit
+                  You have reached the limit of {{ limit }} fields per workspace. Please remove fields that you are no longer using.
+          -elif total_count >= total_limit|add:-10
+            .mb-4
+              %temba-alert(level="warning")
+                -blocktrans trimmed with limit=total_limit
+                  You are approaching the limit of {{ limit }} fields per workspace. You should remove fields that you are no longer using.
 
-            -if view.search_fields
-              %form#search-form.mb-4(method="get")
-                %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
-                %input(type="submit" class="hide")
-            -else
-              -if not is_spa
-                .title
-                  -trans "Featured Fields"
-              .my-4
-                -blocktrans trimmed
-                  Featured fields are shown prominently on contact pages. Drag to reorder the fields that you would most like to see at glance.
+          -if view.search_fields
+            %form#search-form.mb-4(method="get")
+              %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
+              %input(type="submit" class="hide")
+          -else
+            .title
+              -trans "Featured Fields"
+            .my-4
+              -blocktrans trimmed
+                Featured fields are shown prominently on contact pages. Drag to reorder the fields that you would most like to see at glance.
 
-            -block pre-table
-              %temba-modax(id='update-field' header='{{_("Update Field")|escapejs}}')
-              %temba-modax(id='delete-modal' header='{{_("Delete Field")|escapejs}}')
-              %temba-modax(id='usages-modal' header='{{_("Usages")|escapejs}}')
-            
-            - block table
-              %table.list.lined{ class:'{% get_list_class object_list %}', cellspacing:'0'}
-                %thead
-                  %tbody#draggable-tbody
-                    - for obj in object_list
-                      %tr{ data-cfid:'{{ obj.id }}', data-priority:'{{ obj.priority }}', class:'{% if org_perms.contacts.contactfield_update_priority and is_featured_category%}draggable-row{%endif%}'}
-                        - if org_perms.contacts.contactfield_update_priority and is_featured_category
-                          %td.drag-icon.pl-2(style="padding:0px;padding-left:5px;padding-right:5px")
-                            .drag-handle.icon.icon-menu
+          -block pre-table
+            %temba-modax(id='update-field' header='{{_("Update Field")|escapejs}}')
+            %temba-modax(id='delete-modal' header='{{_("Delete Field")|escapejs}}')
+            %temba-modax(id='usages-modal' header='{{_("Usages")|escapejs}}')
+          
+          - block table
+            %table.list.lined{ class:'{% get_list_class object_list %}', cellspacing:'0'}
+              %thead
+                %tbody#draggable-tbody
+                  - for obj in object_list
+                    %tr{ data-cfid:'{{ obj.id }}', data-priority:'{{ obj.priority }}', class:'{% if org_perms.contacts.contactfield_update_priority and is_featured_category%}draggable-row{%endif%}'}
+                      - if org_perms.contacts.contactfield_update_priority and is_featured_category
+                        %td.drag-icon.pl-2(style="padding:0px;padding-left:5px;padding-right:5px")
+                          .drag-handle.icon.icon-menu
 
-                        %td.w-full(style="{%if org_perms.contacts.contactfield_update_priority and is_featured_category%}padding-left:0px;{%endif%}")
-                          -if org_perms.contacts.contactfield_update
-                            .hover-linked.update(onclick="showUpdateContactFieldModal({{obj.id}})")
+                      %td.w-full(style="{%if org_perms.contacts.contactfield_update_priority and is_featured_category%}padding-left:0px;{%endif%}")
+                        -if org_perms.contacts.contactfield_update
+                          .hover-linked.update(onclick="showUpdateContactFieldModal({{obj.id}})")
+                            {{ obj.label }}                          
                               {{ obj.label }}                          
-                              .key{ style:"font-family: monospace; font-size: 12px;" }
-                                @fields.{{ obj.key }}
-                              -if obj.show_in_table
-                                .inline.text-xs.py-1.px-2.font-medium.tracking-wide.p-1.bg-gray-200.rounded-lg
-                                  -trans "Featured"
-                          -else
                             {{ obj.label }}                          
                             .key{ style:"font-family: monospace; font-size: 12px;" }
                               @fields.{{ obj.key }}
-
                             -if obj.show_in_table
                               .inline.text-xs.py-1.px-2.font-medium.tracking-wide.p-1.bg-gray-200.rounded-lg
                                 -trans "Featured"
+                        -else
+                          {{ obj.label }}                          
+                            {{ obj.label }}                          
+                          {{ obj.label }}                          
+                          .key{ style:"font-family: monospace; font-size: 12px;" }
+                            @fields.{{ obj.key }}
 
-                        %td.w-12
-                          .flex.text-center
-                            -if obj.flow_count or obj.campaign_count or obj.contactgroup_count
-                              .uses(onclick='event.stopPropagation(); showFieldUsagesModal("{{ obj.uuid }}");')
-                                .lbl.linked
-                                  {% blocktrans trimmed count counter=obj.flow_count|add:obj.campaign_count|add:obj.contactgroup_count %}
-                                    {{counter}} Use
-                                  {% plural %}
-                                    {{counter}} Uses
-                                  {% endblocktrans %}
-                        %td.w-32
-                          .text-right
-                            {{ obj.get_value_type_display }}
-                        
-                        %td.w-10
-                          -if org_perms.contacts.contactfield_delete
-                            .pl-2.pt-1.delete-link.linked.text-gray-400(style="visibility:hidden" onclick='showFieldDeleteModal("{{ obj.uuid }}")')
-                              %temba-icon(name="x")
-                              
+                          -if obj.show_in_table
+                            .inline.text-xs.py-1.px-2.font-medium.tracking-wide.p-1.bg-gray-200.rounded-lg
+                              -trans "Featured"
 
-                              
-                    - empty
-                      %tr.empty_list
-                        %td{ colspan:'99' }
-                          -trans "No fields"
+                      %td.w-12
+                        .flex.text-center
+                          -if obj.flow_count or obj.campaign_count or obj.contactgroup_count
+                            .uses(onclick='event.stopPropagation(); showFieldUsagesModal("{{ obj.uuid }}");')
+                              .lbl.linked
+                                {% blocktrans trimmed count counter=obj.flow_count|add:obj.campaign_count|add:obj.contactgroup_count %}
+                                  {{counter}} Use
+                                {% plural %}
+                                  {{counter}} Uses
+                                {% endblocktrans %}
+                      %td.w-32
+                        .text-right
+                          {{ obj.get_value_type_display }}
+                      
+                      %td.w-10
+                        -if org_perms.contacts.contactfield_delete
+                          .pl-2.pt-1.delete-link.linked.text-gray-400(style="visibility:hidden" onclick='showFieldDeleteModal("{{ obj.uuid }}")')
+                            %temba-icon(name="x")
+                            
 
-              - block extra-rows
+                            
+                  - empty
+                    %tr.empty_list
+                      %td{ colspan:'99' }
+                        -trans "No fields"
 
-          - block post-table
+            - block extra-rows
 
-      -block paginator
+        - block post-table
+
+    -block paginator
 
 
 {% block extra-script %}
 {{ block.super }}
-  -block spa-script
-    <script>
-      $(document).ready(function(){
+  <script>
+    $(document).ready(function(){
 
-        -if is_featured_category
-          -if org_perms.contacts.contactfield_update_priority
-            var sortable = new Sortable(document.getElementById('draggable-tbody'), {
-              // handle: '.drag-handle',  // make this row draggable only by the handle
-              dataIdAttr: 'data-cfid',
-              direction: 'vertical',
-              animation: 200,
-              ghostClass: "sortable-ghost",  // Class name for the drop placeholder
-              dragClass: "sortable-drag",  // Class name for the dragging item
-              forceFallback: true,
-              onEnd: function (event) {
+      -if is_featured_category
+        -if org_perms.contacts.contactfield_update_priority
+          var sortable = new Sortable(document.getElementById('draggable-tbody'), {
+            // handle: '.drag-handle',  // make this row draggable only by the handle
+            dataIdAttr: 'data-cfid',
+            direction: 'vertical',
+            animation: 200,
+            ghostClass: "sortable-ghost",  // Class name for the drop placeholder
+            dragClass: "sortable-drag",  // Class name for the dragging item
+            forceFallback: true,
+            onEnd: function (event) {
 
-                var priorityMapping = {};
-                $('#draggable-tbody > tr').each(function(idx, elem) {
-                  // rewrite priority of every element based on the current order of elements
-                  var new_idx = 1000 - idx;
-                  priorityMapping[$(elem).data('cfid')] = new_idx;
-                });
+              var priorityMapping = {};
+              $('#draggable-tbody > tr').each(function(idx, elem) {
+                // rewrite priority of every element based on the current order of elements
+                var new_idx = 1000 - idx;
+                priorityMapping[$(elem).data('cfid')] = new_idx;
+              });
 
-                var priorityUpdateUrl = '{% url "contacts.contactfield_update_priority" %}';
+              var priorityUpdateUrl = '{% url "contacts.contactfield_update_priority" %}';
 
-                $.ajax({
-                  type: 'POST',
-                  url: priorityUpdateUrl,
-                  data: JSON.stringify(priorityMapping),
-                  success: function (data, status, jqXHR) {
-                    // do nothing
-                  },
-                  error: function (jqXHR, status, error) {
-                    console.error(jqXHR, status, error);
-                  }
-                });
-              }
-            });
+              $.ajax({
+                type: 'POST',
+                url: priorityUpdateUrl,
+                data: JSON.stringify(priorityMapping),
+                success: function (data, status, jqXHR) {
+                  // do nothing
+                },
+                error: function (jqXHR, status, error) {
+                  console.error(jqXHR, status, error);
+                }
+              });
+            }
+          });
 
-        }); // document.ready
+      }); // document.ready
 
 
-        function showUpdateContactFieldModal(id) {
-          var modax = document.querySelector('#update-field');
-          modax.endpoint = `/contactfield/update/${id}/`;
-          modax.open = true;
-        }
+      function showUpdateContactFieldModal(id) {
+        var modax = document.querySelector('#update-field');
+        modax.endpoint = `/contactfield/update/${id}/`;
+        modax.open = true;
+      }
 
-        function showFieldDeleteModal(uuid) {
-          var modax = document.querySelector('#delete-modal');
-          modax.endpoint = `/contactfield/delete/${uuid}/`;
-          modax.open = true;
-        }
+      function showFieldDeleteModal(uuid) {
+        var modax = document.querySelector('#delete-modal');
+        modax.endpoint = `/contactfield/delete/${uuid}/`;
+        modax.open = true;
+      }
 
-        function showFieldUsagesModal(uuid) {
-          var modax = document.querySelector('#usages-modal');
-          modax.endpoint = `/contactfield/usages/${uuid}/`;
-          modax.open = true;
-        }
-    </script>
-    <script type="text/javascript" src="{{ STATIC_URL }}bower/Sortable/Sortable.min.js"></script>
+      function showFieldUsagesModal(uuid) {
+        var modax = document.querySelector('#usages-modal');
+        modax.endpoint = `/contactfield/usages/${uuid}/`;
+        modax.open = true;
+      }
+  </script>
+  <script type="text/javascript" src="{{ STATIC_URL }}bower/Sortable/Sortable.min.js"></script>
 
 {% endblock %}
-
-
 
 -block extra-style
   {{block.super}}
