--- a/templates/notifications/email/export_finished.results.html
+++ b/templates/notifications/email/export_finished.results.html
@@ -7,6 +7,6 @@
     <li>{{ flow.name }}</li>
 {% endfor %}
 </ul>
-<p>{% blocktrans with url=target_url %}Download the Excel file here: {{ url }}{% endblocktrans %}</p>
+<p>{% blocktrans with url=branding.link|add:target_url %}Download the Excel file here: {{ url }}{% endblocktrans %}</p>
 <p>{% trans "Thanks" %}</p>
 <p>{% blocktrans with brand=branding.name %}The {{ brand }} Team{% endblocktrans %}</p>
