--- a/templates/smartmin/users/user_update.haml
+++ b/templates/smartmin/users/user_update.haml
@@ -84,7 +84,36 @@
       margin-left: 0px;
     }
 
+    form.smartmin-form {
+      margin-top: 60px;
+    }
+
     form.user_mimic {
       margin-top: 20px
+    }
+
+    form input[type=text], form input[type=password], form input[type=email] {
+      background-color: white;
+      padding: var(--temba-textinput-padding);
+      flex: 1 1 0%;
+      margin: 0px;
+      color: var(--color-widget-text);
+      font-family: var(--font-family);
+      font-size: var(--temba-textinput-font-size);
+      line-height: normal;
+      cursor: text;
+      resize: none;
+      font-weight: 300;
+      width: 100%;
+      border-radius: var(--curvature-widget);
+      cursor: text;
+      background: var(--color-widget-bg);
+      border: 1px solid var(--color-widget-border);
+      transition: all 0.2s ease-in-out 0s;
+      display: flex;
+      flex-direction: row;
+      align-items: stretch;
+      box-shadow: rgb(0 0 0 / 4%) 0px 3px 20px 0px, rgb(0 0 0 / 2%) 0px 1px 2px 0px;
+      caret-color: var(--input-caret);
     }
 
