--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -19,7 +19,10 @@
 
       // Weni's addition to send a message to Connect about our current route
       {% if use_weni_layout %}
-        window.parent.postMessage(window.location.pathname, "*")
+        window.parent.postMessage({
+          event: 'changePathname',
+          pathname: window.location.pathname,
+        }, "*")
       {% endif %}
 
       window.supportEmail = '{{brand.support_email}}';
@@ -325,6 +328,58 @@
         }
       }
 
+      function enableLinkTranslations() {
+        let connectBaseURL = '';
+
+        function translateAllLinks() {
+          if (!connectBaseURL) {
+            return;
+          }
+          const url = new URL(connectBaseURL);
+          const debug = url.host && url.host.includes('develop');
+          document.querySelectorAll('a[href]').forEach((link) => {
+            const internalHref = link.getAttribute('internal-href') || link.getAttribute('href');
+            if (['http://', 'https://'].some((initial) => internalHref.startsWith(initial))) {
+              return;
+            }
+            const dashHref = connectBaseURL + internalHref;
+            if (link.translateLinkConnect) {
+              if (link.getAttribute('href') === dashHref) {
+                return;
+              }
+              link.removeEventListener('click', link.translateLinkConnect);
+            }
+            link.setAttribute('internal-href', internalHref);
+            link.setAttribute('href', dashHref);
+            const randomId = Math.floor(Math.random() * 100);
+            link.addEventListener(
+              'click',
+              (link.translateLinkConnect = () => {
+                if (debug) {
+                  console.log(`TranslateLinkConnectId ${randomId}`);
+                }
+                link.setAttribute('href', internalHref);
+                setTimeout(() => {
+                  link.setAttribute('href', dashHref);
+                }, 0);
+              }),
+            );
+          });
+        };
+
+        window.addEventListener('message', (event) => {
+          const eventName = event.data && event.data.event;
+          if (eventName === 'setConnectBaseURL') {
+            connectBaseURL = event.data.connectBaseURL;
+            translateAllLinks();
+          }
+        });
+
+        window.parent.postMessage({ 
+          event: 'getConnectBaseURL'
+        }, '*');
+      }
+
       function posterize(href) {
         var url = $.url(href);
         $("#posterizer").attr("action", url.attr("path"));
@@ -396,6 +451,9 @@
 
         {% if use_weni_layout %}
           inIframe();
+
+          enableLinkTranslations();
+
         {% endif %}
 
         function announcementCollapse() {
